--- a/templates/view.html
+++ b/templates/view.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>阅览 {{ pdffile }} {{ pdfpage }} {{ outline }}</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="static/style.css">
 </head>
 
@@ -46,7 +46,7 @@
     </div>
 
 <script src="static/trad2simp.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="static/jquery.min.js"></script>
 <script>
     const $ = jQuery;
     
